--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "date-fns": "^2.22.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stopwatch": "^2.0.4",
+    "react-stopwatch-timer": "^1.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
