--- a/package.json
+++ b/package.json
@@ -11,15 +11,28 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "connected-react-router": "^6.0.0",
     "date-fns": "^2.22.1",
+    "dotenv": "^8.2.0",
+    "history": "^4.10.1",
+    "immer": "^9.0.2",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "4.0.1",
     "react-stopwatch": "^2.0.4",
     "react-stopwatch-timer": "^1.0.0",
-    "web-vitals": "^1.0.1"
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.1",
+    "underscore": "^1.12.0",
+    "uniqid": "^5.3.0",
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
